Update index to fix broken style

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,10 +19,8 @@ body {
 }
 
 .panel-1-image {
-	width: 100%;
-	height: 100%;
-	max-width: 500px;
-	max-height: 333px;
+	width: 500px;
+	height: 333px;
 	background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 1.0) 100%),
 		url('../img/image-equipment-small.jpg');
 	background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 1.0) 100%),
@@ -31,6 +29,7 @@ body {
 		url('../img/image-equipment-small.jpg');
 	background-image: linear-gradient(left, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 1.0) 100%),
 		url('../img/image-equipment-small.jpg');
+	background-repeat: no-repeat;
 }
 
 .panel-1-text-background {
@@ -68,8 +67,7 @@ body {
 	position: relative;
 	display: inline-block;
 	top: 0px;
-	height: 100%;
-	max-height: 333px;
+	height: 333px;
 	text-align: left;
 	color: #a1d6bc;
 	background: -webkit-linear-gradient(right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 20%);
